bk_ida/gccida/c3/dwarf2out_stack_adjust
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_stack_adjust/src/dwarf2out.c:1468:11: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
offset = -args_size_0; 
          ^~~~~~~~~~~
          args_size
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_stack_adjust/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_stack_adjust/src/dwarf2out.c:1489:1: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
args_size_0 += offset; 
^~~~~~~~~~~
args_size
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_stack_adjust/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_stack_adjust/src/dwarf2out.c:1490:6: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
if ( args_size_0 < 0 ) 
     ^~~~~~~~~~~
     args_size
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_stack_adjust/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_stack_adjust/src/dwarf2out.c:1491:1: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
args_size_0 = 0LL; 
^~~~~~~~~~~
args_size
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_stack_adjust/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_stack_adjust/src/dwarf2out.c:1494:29: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
dwarf2out_args_size( label, args_size_0); 
                            ^~~~~~~~~~~
                            args_size
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_stack_adjust/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_stack_adjust/src/dwarf2out.c:1500:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
insna = ( rtx)insn[2]; 
              ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_stack_adjust/src/dwarf2out.c:1504:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
insna = ( rtx)insna[1]; 
              ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_stack_adjust/src/dwarf2out.c:1507:23: error: use of undeclared identifier 'arg0'
dwarf2out_args_size( &arg0, *( _QWORD *)( *( _QWORD *)&insna[1] + 8LL)); 
                      ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_stack_adjust/src/obj/dwarf2out.o] Error 1
